# esusfarm

./: .gitignore  Dockerfile  Pipfile  README.MD  brownie-config.yaml  docker-compose.yaml  foundry.toml  hello.py  polygon-network.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: dependabot.yml
app/: Dockerfile  amend_locations.py  docker-compose.yaml  locations.csv  main.py  requirements.txt
app/abi/: ArcModel.json  ArcPool.json  ArcProduct.json  EXOF.json  InstanceServiceV2.json  Mapper.json
app/abi/AccountingToken.sol/: AccountingToken.json
app/abi/CropProduct.sol/: CropProduct.json
app/abi/Instance.sol/: Instance.json
app/data/: locations.csv  offchain_data.py  onchain_data.py
app/server/: app.py  config.py  error.py  mongo.py  utils.py
app/util/: csv.py  date.py  date_util.py  excel.py  logging.py  mongo.py  nanoid.py  wallet.py
app/web3_utils/: contract.py
app/web3utils/: blocks.py  chain.py  contract.py  send_eth.py  wallet.py
cache/: solidity-files-cache.json
contracts/: Counter.sol
contracts_backup/: ArcModel.sol  ArcPool.sol  ArcProduct.sol  EXOF.sol  Mapper.sol
contracts_backup/gif/: InstanceServiceV2.sol
script/: MockSetup.s.sol
scripts/: close_season.py  const.py  deploy.py  instance.py  requirements.txt  setup.py  util.py
scripts/foundry/: Mock.s.sol
scripts/upload/: init_mapper.py  pam.py  pam_only.py  policies.csv
src/: AccountingToken.sol  CropProduct.sol  StrHelper.sol  Types.sol
src/mock/: Product.sol  Types.sol
test/: AccountingToken.t.sol  CropProduct.t.sol
(+38 files in other folders)
