[project]
name = "esusfarm"
version = "0.1.0"
description = "Etherisc Platform API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "iso3166>=2.1.1",
    "jwt>=1.3.1",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.7.0",
    "pymongo>=4.10.1",
    "uvicorn>=0.34.0",
    "web3>=7.6.0",
]
